Update 'backend-tests-go-rsbharuy' component image to: quay.io/rhtap_qe/backend-tests-go-rsbharuy:1535884f816b80084b150c6ddc5bd05a8624bd50@sha256:9ce210cfbbee592db294b9c030e410596a9cae581dfd0ff82c4867f09e4e2df4

--- a/components/backend-tests-go-rsbharuy/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-rsbharuy/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-rsbharuy
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-rsbharuy:1535884f816b80084b150c6ddc5bd05a8624bd50@sha256:9ce210cfbbee592db294b9c030e410596a9cae581dfd0ff82c4867f09e4e2df4
+          name: container-image
